# leaxer-qwen3-tts

./: .gitignore  .gitmodules  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  hi_analysis.ppm  hi_report.txt  python_hi_analysis.ppm  python_hi_report.txt  tensor_comparison.py
.github/workflows/: build.yml  ci.yml
debug_output/: 01_tokenizer_info.json  01_tokens.json  01_tokens.npy
include/: leaxer_qwen.h
scripts/: analyze_audio.py  convert_to_gguf.py  debug_pipeline.py  detailed_analysis.py  dump_reference_values.py  export_to_onnx.py  onnx_inference.py  oracle.py  run_vocoder.py  test_reference.py  test_roundtrip.py  test_vocoder_patterns.py  test_vocoder_stages.py  visualize_audio.py  vocoder_test.py
src/: common.h  leaxer_qwen.cpp  main_onnx.cpp  tts_onnx.cpp  tts_onnx.h
src/ggml_ops/: conv1d.cpp  rms_norm.cpp  rope.cpp  snake_beta.cpp
src/io/: gguf_loader.cpp  mel.cpp  mel.h  tokenizer.cpp  tokenizer.h  wav_reader.cpp  wav_reader.h  wav_writer.cpp
src/model/: attention.cpp  code_predictor.cpp  code_predictor.h  ffn.cpp  kv_cache.h  model_weights.h  qwen_tts.cpp  qwen_tts_interleaved.cpp  transformer.cpp  transformer_cached.cpp
src/onnx/: onnx_session.cpp  onnx_session.h  tensor_utils.h
src/vocoder/: causal_conv.cpp  convnext.cpp  split_rvq.cpp  upsample.cpp  vocoder.cpp
tests/: test_audio_quality.cpp  test_conv1d.cpp  test_e2e.cpp  test_gguf_mapping.cpp  test_mel.cpp  test_onnx.cpp  test_placeholder.cpp  test_real_model.cpp  test_rmsnorm.cpp  test_snakebeta.cpp  test_speaker_embedding.cpp  test_tokenizer.cpp  test_tokenizer_real.cpp  test_utils.h  test_wav.cpp  test_wav_reader.cpp
tests/fixtures/: conv1d_input.json  conv1d_output.json  conv1d_weight.json  rmsnorm_input.json  rmsnorm_output.json  rmsnorm_weight.json  snakebeta_alpha_logscale.json  snakebeta_beta_logscale.json  snakebeta_input.json  snakebeta_output.json  tokenizer_test0.json  tokenizer_test1.json  tokenizer_test2.json  tokenizer_test3.json  tokenizer_test4.json  weight_map.json
vocoder_debug/: audio.npy  causal_out.npy  convnext_out.npy  post_trans.npy  pre_conv_out.npy  pre_trans_in.npy  pre_trans_layers_out.npy  pre_trans_out_proj.npy  proj_combined.npy  proj_first.npy  proj_rest.npy  rvq_first_emb.npy  rvq_rest_emb.npy
